--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.PlayGames"
         tools:targetApi="31">
         <activity
-            android:name=".Search"
+            android:name=".AboutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GenerosActivity"
             android:exported="false" />
         <activity
             android:name=".Games"
