Actualización de la documentación y ajustes de configuración
# Conflicts:
#	app/docs/app/com.example.playgames.adapter/-about-adapter/-about-adapter.md
#	app/docs/app/com.example.playgames.adapter/-about-adapter/index.md
#	app/docs/app/com.example.playgames.adapter/-about-view-holder/index.md
#	app/docs/app/com.example.playgames.adapter/-about-view-holder/render.md
#	app/docs/app/com.example.playgames.adapter/-genero-adapter/-genero-adapter.md
#	app/docs/app/com.example.playgames.adapter/-genero-adapter/index.md
#	app/docs/app/com.example.playgames.adapter/-genero-view-holder/index.md
#	app/docs/app/com.example.playgames.adapter/-genero-view-holder/render.md
#	app/docs/app/com.example.playgames.adapter/index.md
#	app/docs/app/com.example.playgames.model/-about-provider/-companion/about-list.md
#	app/docs/app/com.example.playgames.model/-about-provider/-companion/index.md
#	app/docs/app/com.example.playgames.model/-about-provider/index.md
#	app/docs/app/com.example.playgames.model/-about/-about.md
#	app/docs/app/com.example.playgames.model/-about/imagen.md
#	app/docs/app/com.example.playgames.model/-about/index.md
#	app/docs/app/com.example.playgames.model/-about/nombre.md
#	app/docs/app/com.example.playgames.model/-about/numero.md
#	app/docs/app/com.example.playgames.model/-genero-provider/-companion/genero-list.md
#	app/docs/app/com.example.playgames.model/-genero-provider/-companion/index.md
#	app/docs/app/com.example.playgames.model/-genero-provider/index.md
#	app/docs/app/com.example.playgames.model/-genero/-genero.md
#	app/docs/app/com.example.playgames.model/-genero/index.md
#	app/docs/app/com.example.playgames.model/-genero/nombre.md
#	app/docs/app/com.example.playgames/-about-activity/index.md
#	app/docs/app/com.example.playgames/-games-activity/-games-activity.md
#	app/docs/app/com.example.playgames/-games-activity/on-create-options-menu.md
#	app/docs/app/com.example.playgames/-games-activity/on-options-item-selected.md
#	app/docs/app/com.example.playgames/

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,17 @@
             android:name=".GenerosActivity"
             android:exported="false" />
         <activity
-            android:name=".Games"
+            android:name=".GamesActivity"
             android:exported="false"
             android:label="@string/games"
             android:theme="@style/Theme.PlayGames" />
         <activity
-            android:name=".Preferences"
+            android:name=".PreferencesActivity"
             android:exported="false"
             android:label="@string/preferences"
             android:theme="@style/Theme.PlayGames" />
         <activity
-            android:name=".NewPlayer"
+            android:name=".NewPlayerActivity"
             android:exported="false"
             android:label="@string/new_player"
             android:theme="@style/Theme.PlayGames" />
